# PIAIC-Q3-quiz-preparation

./: README.md
generics/: api_response_wrapper.py  caching_system.py  hello.py  method-overload.py  pagingsystem.py  pyproject.toml  restric_type.py  result_wrapper.py  swap_two_values.py  upper_bounds.py
markdown/: readm.md
openai-agent-sdk-prepartion/: .env
openai-agent-sdk-prepartion/proj1/: .env  Source.gv  pyproject.toml
openai-agent-sdk-prepartion/proj1/  proj1/:     main.py
openai-agent-sdk-prepartion/proj1/src/proj1/: Context management.py  __init__.py  agent.py  agent_visualization.py  customer_support_agent.py  guardrails.py  handoff.py  main.py  readme.md  streaming.py  task_manager.py  tool_dynamic_permission.py.py  tools.py  tracing.py
openai-agent-sdk-prepartion/proj1/src/proj1/Api-Refrence/: Agents.py  Runner.py  agents module.py  exceptions.py  guardrails.py  handoff.py  hanoff2.py  lifecycle.py  modelsettings.py  streaming.py  tools.py
openai-agent-sdk-prepartion/proj1/src/proj1/Api-Refrence/tracing/: default_tracing.py  example.py  sensitive_data.py  span_types.py  trace_locally.py
openai-agent-sdk-prepartion/proj1/src/proj1/api/: story_api.py
openai-agent-sdk-prepartion/proj1/src/proj1/examples/: agent_as_tool.py  deterministic.py  tools_pr.py
openai-agent-sdk-prepartion/proj1/src/proj1/practice/: streaming_pr.py
pydantic/: .env  main.py
